# optimo

./: .gitignore  README.md  deploy.sh  docker-compose.prod.yaml  docker-compose.yml  docker-compose.yml_bkp  docker-compose.yml_bkp2
.github/: ci-cd.yaml
feature-extraction-backend-main/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
feature-extraction-backend-main/app/: dependencies.py  main.py
feature-extraction-backend-main/app/routers/: bsa_reports.py
feature-extraction-backend-main/app/sql/: crud.py  database.py  models.py  schemas.py
feature-extraction-backend-main/app/utils/bsa_report_parser/: parser.py  schema.py
feature-extraction-frontend-main/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
feature-extraction-frontend-main/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
feature-extraction-frontend-main/components/: ReportFeatures.tsx  UploadForm.tsx
feature-extraction-frontend-main/components/Common/: Alert.tsx  CustomErrorUI.tsx  Table.tsx
feature-extraction-frontend-main/components/Common/Buttons/: RetryButton.tsx
feature-extraction-frontend-main/context/: AlertContext.tsx
feature-extraction-frontend-main/env/: client-env.ts
feature-extraction-frontend-main/lib/: axios.ts  utils.ts
feature-extraction-frontend-main/types/: ReportFeaturesData.ts  index.ts
monitoring/: Caddyfile  prometheus.yml
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  user-data.sh
